tests/qml/invalid/InvalidSignal.qml
import QtQuick 2.0

Item {
  signal simpleSignal(string abc, bool)
}
